--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ button:hover, a:hover {
   <p class="title">Student</p>
   <p>Knit, Sultanpur</p>
   <div style="margin: 24px 0;">
-    <a href="www.instagram.com"><i class="fa fa-instagram"></i></a> 
+    <a href="#"><i class="fa fa-instagram"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a>  
     <a href="#"><i class="fa fa-linkedin"></i></a>  
     <a href="#"><i class="fa fa-facebook"></i></a> 
