--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ button:hover, a:hover {
   <p class="title">Student</p>
   <p>Knit, Sultanpur</p>
   <div style="margin: 24px 0;">
-    <a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a> 
+    <a href="https://www.instagram.com/im.yogeshyadav/"><i class="fa fa-instagram"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a>  
-    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="#"><i class="fa fa-wikipedia"></i></a>  
     <a href="#"><i class="fa fa-facebook"></i></a> 
   </div>
   <p><button>Contact</button></p>
