--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-display-container">
           <img src="Yogesh.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2 style="font-family:">Yogesh Yadav</h2>
+            <h2 style="font-family:"Times New Roman";color:#00ffff><i><b>Yogesh Yadav</b></i></h2>
           </div>
         </div>
         <div class="w3-container">
@@ -132,10 +132,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
+  <i class="fa fa-instagram w3-hover-opacity"><a href="https://www.instagram.com/im.yogeshuadav/></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
+  <i class="fa fa-twitter w3-hover-opacity"><a href="https://www.twitter.com/im_yogeshyadav/></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
 
 </footer>
