--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">80%</div>
               
             </div>
-          </div>
+          </div><br/>
           <img src="Python.jpg" style="width:100%">
           <p>SQL</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
