--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br/>
          
           <img src="C.jpg" style="width:100%">
-         <p>To verify the certificate <span><a href="https://www.sjz.com>click here<a/>
+         <p>To verify the certificate <span><a href="https://www.sjz.com>click here<a/><span/>
           <p>Python</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
