--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
          
           <img src="C.jpg" style="width:100%">
          <p>To verify the certificate <a href="https://www.sjz.com">click here<a/>
-          <p>Python</p>
+           <hr/>
+          <p class="w3-large w3-text-theme">Pyton<p/>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
