--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br/>
          
           <img src="C.jpg" style="width:100%">
-         <p>To verify the certificate <a href="https://www.sjz.com">click here<a/>
+         <p><h6>To verify the certificate <a href="https://www.sjz.com">click here<a/><h6/>
            <hr/>
           <p class="w3-large w3-text-theme">Pyton<p/>
           <div class="w3-light-grey w3-round-xlarge w3-small">
