--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Programming skills</b></p>
-          <h4 class="w3-opacity">C and C++<h4/>
+          <h4 class="w3-opacity">C and C++</h4>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
           </div>
           <br/>
          
           <img src="C.jpg" style="width:100%">
-         <p><h6>To verify the certificate <a href="https://www.sjz.com">click here<a/><h6/>
+         <p><h6>To verify the certificate <a href="https://www.sjz.com">click here</a></h6>
            <hr/>
           <p class="w3-large w3-text-theme">Pyton<p/>
           <div class="w3-light-grey w3-round-xlarge w3-small">
