--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ button:hover, a:hover {
   <div style="margin: 24px 0;">
     <a href="https://www.instagram.com/im.yogeshyadav/"><i class="fa fa-instagram"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a>  
-    <a href="https://simple.m.wikipedia.org/wiki/User:Imyogeshyadav"><i class="fa fa-wikipedia"></i></a>  
+    <a href="https://simple.m.wikipedia.org/wiki/User:Imyogeshy
     <a href="#"><i class="fa fa-facebook"></i></a> 
   </div>
   <p><button>Contact</button></p>
