--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 500px;
+  max-width: 90%;
   margin: auto;
   text-align: center;
   font-family: arial;
