--- a/index.html
+++ b/index.html
@@ -76,10 +76,14 @@ nothing to do right now the virus has downed upon my life shattered my hopes   <
 <div class="w3-col l4">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
-  <img src="/w3images/avatar_g.jpg" style="width:100%">
+  <img src="Yogesh Yadav.jpg" style="width:100%">
     <div class="w3-container w3-white">
-      <h4><b>My Name</b></h4>
-      <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
+      <h4><b>Yogesh Yadav</b></h4>
+      <p>If you are here than you know who i am ah! actually you don't but you know what i prentend to be well if you know that i am weird, mad and sarcastic at times then you are a friend or someone who is damn special for me. oh! if you are an interloper then let me introduce myself as i always 
+      say i am a men of personality with too many faces (i wrote that line and will try to get a copyright soon) i am talkative and calm too i'm an introvert at times and an extrovert too
+and here on my blog you will find some real shit so stay connected....
+
+  </p>
     </div>
   </div><hr>
   
