--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes   <
 <div class="w3-col l4">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
-  <img src="Yogesh Yadav.jpg" style="width:100%">
+  <img src=".jpg" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>Yogesh Yadav</b></h4>
       <p>If you are here than you know who i am ah! actually you don't but you know what i prentend to be well if you know that i am weird, mad and sarcastic at times then you are a friend or someone who is damn special for me. oh! if you are an interloper then let me introduce myself as i always 
@@ -120,10 +120,14 @@ and here on my blog you will find some real shit so stay connected....
   <!-- Labels / tags -->
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding">
-      <h4>Tags</h4>
+      <h4>Yogesh Yadav</h4>
     </div>
     <div class="w3-container w3-white">
-    <p><span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
+      <img src="Yogesh Yadav.jpg" style="width:100%">
+  <p>If you are here than you know who i am ah! actually you don't but you know what i prentend to be well if you know that i am weird, mad and sarcastic at times then you are a friend or someone who is damn special for me. oh! if you are an interloper then let me introduce myself as i always 
+      say i am a men of personality with too many faces (i wrote that line and will try to get a copyright soon) i am talkative and calm too i'm an introvert at times and an extrovert too
+and here on my blog you will find some real shit so stay connected....</p>
+  <p><span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
       <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
       <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
       <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
