--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@ and here on my blog you will find some real shit so stay connected....
       say i am a men of personality with too many faces (i wrote that line and will try to get a copyright soon) i am talkative and calm too i'm an introvert at times and an extrovert too
 and here on my blog you will find some real shit so stay connected....</p>
   <p><!--span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>-->
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Writer</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Engineer</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Programmer</span>
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Music lover</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Introvert</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Arrogant</span>
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Wild</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom"></span>
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom"></span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Down for chase</span>
     </p>
     </div>
   </div>
