--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ and here on my blog you will find some real shit so stay connected....
     <div class="w3-container w3-padding">
       <h4>Yogesh Yadav</h4>
     </div>
-    <div class="w3-container w3-white">
+    <div class="w3-container w3-white"><br>
       <img src="Yogesh Yadav.jpg" style="width:100%">
   <p>If you are here than you know who i am ah! actually you don't but you know what i prentend to be well if you know that i am weird, mad and sarcastic at times then you are a friend or someone who is damn special for me. oh! if you are an interloper then let me introduce myself as i always 
       say i am a men of personality with too many faces (i wrote that line and will try to get a copyright soon) i am talkative and calm too i'm an introvert at times and an extrovert too
