--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ and here on my blog you will find some real shit so stay connected....</p><hr>
   <p><!--span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>-->
       <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Writer</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Engineer</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Programmer</span>
       <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Music lover</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Introvert</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Arrogant</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Wild</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom"></span>
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Wild</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Entrepreneur</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom"></span>
       <span class="w3-tag w3-light-grey w3-small w3-margin-bottom"></span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Down for chase</span>
     </p>
     </div>
