--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ nothing to do right now the virus has downed upon my life shattered my hopes   <
 <!-- END BLOG ENTRIES -->
 </div>
 
-<!-- Introduction menu
+<!-- Introduction menu-->
 <div class="w3-col l4">
-  <!-- About Card 
+  <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
     <br>
   <img src=".jpg" style="width:100%">
@@ -89,7 +89,7 @@ and here on my blog you will find some real shit so stay connected....
     </div>
   </div><hr>
   
-  <!-- Posts 
+  <!-- Posts -->
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding">
       <h4>Popular Posts</h4>
@@ -118,7 +118,7 @@ and here on my blog you will find some real shit so stay connected....
     </ul>
   </div>
   <hr> 
-  -->
+  
  
   <!-- Labels / tags -->
   <div class="w3-card w3-margin">
