--- a/index.html
+++ b/index.html
@@ -92,28 +92,28 @@ nothing to do right now the virus has downed upon my life shattered my hopes   <
   <!-- Posts -->
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding">
-      <h4>Popular Posts</h4>
+      <h4></h4>
     </div>
     <ul class="w3-ul w3-hoverable w3-white">
       <li class="w3-padding-16">
         <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Lorem</span><br>
-        <span>Sed mattis nunc</span>
+        <span class="w3-large"></span><br>
+        <span></span>
       </li>
       <li class="w3-padding-16">
         <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Ipsum</span><br>
-        <span>Praes tinci sed</span>
+        <span class="w3-large"></span><br>
+        <span></span>
       </li> 
       <li class="w3-padding-16">
         <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Dorum</span><br>
-        <span>Ultricies congue</span>
+        <span class="w3-large"></span><br>
+        <span></span>
       </li>   
       <li class="w3-padding-16 w3-hide-medium w3-hide-small">
         <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Mingsum</span><br>
-        <span>Lorem ipsum dipsum</span>
+        <span class="w3-large"></span><br>
+        <span></span>
       </li>  
     </ul>
   </div>
