--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes   <
   <div class="w3-card w3-margin w3-margin-top">
     <br>
   <!--img src=".jpg" style="width:100%"-->
-   <!-- <div class="w3-container w3-white"> -->
+    <div class="w3-container w3-white">
       <br>
       <h4><b></b></h4>
       <p> 
