--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
 
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-  <img src=".jpg" alt="Not yet captured" style="width:100%">
+  <img src="beginning.jpg" alt="Not yet captured" style="width:100%">
     <div class="w3-container">
       <h3><b>Next entry coming soon...</b></h3>
       <h5>Description under construction, <span class="w3-opacity">August 31, 2020</span></h5>
