--- a/index.html
+++ b/index.html
@@ -96,22 +96,22 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
     </div>
     <ul class="w3-ul w3-hoverable w3-white">
       <li class="w3-padding-16">
-        <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+      <!--  <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px"> -->
         <span class="w3-large"></span><br>
         <span></span>
       </li>
       <li class="w3-padding-16">
-        <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+      <!--  <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px"> -->
         <span class="w3-large"></span><br>
         <span></span>
       </li> 
       <li class="w3-padding-16">
-        <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+        <!-- <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px"> -->
         <span class="w3-large"></span><br>
         <span></span>
       </li>   
       <li class="w3-padding-16 w3-hide-medium w3-hide-small">
-        <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+       <!-- <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px"> -->
         <span class="w3-large"></span><br>
         <span></span>
       </li>  
