--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>Just thinking what should i write on my first blog post should it be inspirational one or just an introductory and now ending up saying that yes  "I'M ON" i have 
-nothing to do right now the virus has downed upon my life shattered my hopes and i am up with my first post...   </p>
+      <p>I was thinking what should i write on my first blog post should it be inspirational one or just an introductory and now ending up my thoughts saying that yes  "I'M ON" i have 
+nothing to do right now the virus has downed upon my life shattered my hopes and i am up with my first post... 
+      <br> I am feeling empty it's a new emotional state i had never suffered and at times it gets worse that's why i am starting my blog social media...
+      </p>
       <div class="w3-row">
         <div class="w3-col m8 s12">
   <!--         <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p> -->
