--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>I was thinking what should i write on my first blog post should it be inspirational one or just an introductory and now ending up my thoughts saying that yes  "I'M ON" i have 
-nothing to do right now the virus has downed upon my life shattered my hopes and i am up with my first post... 
-      <br> I am feeling empty it's a new emotional state i had never suffered and at times it gets worse that's why i am starting my blog social media...
+      <p>I was thinking what should i write on my first blog post should it be inspirational one or just an introductory and now ending up my thoughts saying that yes <b> "I'M ON"</b> i have 
+nothing to do right now the virus has downed upon my life shattered my hopes and i am up with my first post.
+      <br> I am feeling empty it's a new emotional state i had never suffered and at times it gets worse that's why i am starting my blog...
       </p>
       <div class="w3-row">
         <div class="w3-col m8 s12">
