--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ and here on my blog you will find some real <s>shit</s> stuff so stay connected.
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
   <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
   <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
-  <p></p>
+  <p>&copy; Copyright 2020, All rights are reserved</p>
 </footer>
 
 </body>
