--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
   <!-- Labels / tags -->
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding">
-      <h4><b>Yogesh Yadav</b></h4>
+      <h3>Yogesh Yadav</h3>
     </div>
     <div class="w3-container w3-white"><br>
       <img src="Yogesh Yadav.jpg" style="width:100%">
