--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ and here on my blog you will find some real <s>shit</s> stuff.<br>So stay connec
           <i class="fa fa-instagram w3-hover-opacity"><a href="https://www.instagram.com/im.yogeshyadav"></a></i>
           
           
-          <i class="fa fa-twitter w3-hover-opacity"><a href="https://www.twitter.com/im_yogeshyadav"></a></i>
+         <a href="https://www.twitter.com/im_yogeshyadav"><i class="fa fa-twitter w3-hover-opacity"></i></a>
           <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
       </div>
