--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ and here on my blog you will find some real <s>shit</s> stuff.<br>So stay connec
      <a href="https://www.instagram.com/im.yogeshyadav"><i class="fa fa-instagram w3-hover-opacity"></i></a>
           
           
-         <a href="https://www.twitter.com/im_yogeshyadav"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
+        <a href="https://www.twitter.com/im_yogeshyadavadav"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+       <a href="https://www.linkedin.com/in/yogesh-kumar-yadav-a934631b1"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
         </div>
       </div>
  
