--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ and here on my blog you will find some real <s>shit</s> stuff.<br>So stay connec
 <!-- Footer -->
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
   <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
-  <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
+  <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Next »</button>
   <p>&copy; Copyright 2020, All rights are reserved by yogesh yadav</p>
 </footer>
 
