--- a/index.html
+++ b/index.html
@@ -154,8 +154,11 @@ and here on my blog you will find some real <s>shit</s> stuff.<br>So stay connec
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-      <div class="w3-white w3-margin">
-        <div class="w3-container w3-padding w3-black">
+    <!--  <div class="w3-white w3-margin">
+        <div class="w3-container w3-padding w3-black"> -->
+        <div class="w3-card-4 w3-margin w3-white">
+  
+    <div class="w3-container">                                                                                                                                        
           <h4>Follow Me</h4>
         </div>
         <div class="w3-container w3-xlarge w3-padding">
