--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ and here on my blog you will find some real <s>shit</s> stuff.<br>So stay connec
         <div class="w3-container w3-padding w3-black"> -->
         <div class="w3-card-4 w3-margin w3-white">
   
-    <div class="w3-container">                                                                                                                                        
+    <div class="w3-container w3-black">                                                                                                                                        
           <h4>Follow Me</h4>
         </div>
         <div class="w3-container w3-xlarge w3-padding">
