--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
       <img src="Yogesh Yadav.jpg" style="width:100%">
   <p>If you are here than you know who i am.<br>Ah! actually you don't, but you know what i prentend to be. Well if you know that i am weird, mad and sarcastic at times then you are a friend or someone who is damn special for me. If you are an interloper then let me introduce myself as i always 
       say i am a man of personality with too many faces (i wrote that line and will try to get a copyright soon) i am talkative and calm too; i'm an introvert at times and an extrovert too
-and here on my blog you will find some real <s>shit</s> stuff.<br>So stay connected....</p><hr>
+and here on my blog you will find some real <s>shit</s> stuff.<br><i>So stay connected</i>....</p><hr>
   <p><!--span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>-->
       <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Writer</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Engineer</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Programmer</span>
       <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Music lover</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Introvert</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Arrogant</span>
