--- a/index.html
+++ b/index.html
@@ -201,5 +201,16 @@ and here on my blog you will find some real <s>shit</s> stuff.<br><i>So stay con
   <p>&copy; Copyright 2020, All rights are reserved by yogesh yadav</p>
 </footer>
 
+<script>
+// Script to open and close sidebar
+function w3_open() {
+  document.getElementById("mySidebar").style.display = "block";
+}
+ 
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
+                                                                                                                                                
 </body>
 </html>
