--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
   
  
   <!-- Labels / tags -->
+   <hr id="about">                                                                                                           
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding w3-black">
       <h4>Yogesh Yadav</h4>
