--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">×</a>
                   
-  <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button">Food</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
+  <a href="#follow" onclick="w3_close()" class="w3-bar-item w3-button">Follow Me</a>
 </nav>
 
 <!-- Top menu -->
@@ -143,7 +143,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
   
  
   <!-- Labels / tags -->
-   <hr id="about">                                                                                                           
+    <id="about">                                                                                                           
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding w3-black">
       <h4>Yogesh Yadav</h4>
