--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
       </li>  
     </ul>
   </div>
-  <hr> 
+  <hr id="about"> 
   
  
   <!-- Labels / tags -->
-    <id="about">                                                                                                           
+                                                                                                       
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding w3-black">
       <h4>Yogesh Yadav</h4>
