--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ and here on my blog you will find some real <s>shit</s> stuff.<br><i>So stay con
         <div class="w3-card-4 w3-margin w3-white">
   
     <div class="w3-container w3-black">                                                                                                                                        
-          <h4>Follow Me</h4>
+          <h4 id="follow">Follow Me</h4>
         </div>
         <div class="w3-container w3-xlarge w3-padding">
          
