--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">×</a>
                   
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a><hr>
   <a href="#follow" onclick="w3_close()" class="w3-bar-item w3-button">Follow Me</a>
 </nav>
 
