--- a/index.html
+++ b/index.html
@@ -127,12 +127,13 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
         <span class="w3-large"></span><br>
         <span></span>
       </li> 
+       <id= "about">                                                                                                       
       <li class="w3-padding-16">
         <!-- <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px"> -->
         <span class="w3-large"></span><br>
         <span></span>
       </li>
-       <hr id="about">                                                                                                       
+                                                                                                              
       <li class="w3-padding-16 w3-hide-medium w3-hide-small">
        <!-- <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px"> -->
         <span class="w3-large"></span><br>
