--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
         <span class="w3-large"></span><br>
         <span></span>
       </li> 
-       <id= "about">                                                                                                       
+                                                                                                              
       <li class="w3-padding-16">
         <!-- <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px"> -->
         <span class="w3-large"></span><br>
@@ -148,7 +148,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
                                                                                                        
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding w3-black">
-      <h4>Yogesh Yadav</h4>
+      <h4 id="about">Yogesh Yadav</h4>
     </div>
     <div class="w3-container w3-white"><br>
       <img src="Yogesh Yadav.jpg" style="width:100%">
