--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ral
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">                   
 <style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+<!--body,h1,h2,h3,h4,h5 {font-family: "body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}Raleway", sans-serif}-->
+  body,h1,h2,h3,h4,h5 {font-family: "Alex Brush"}                                    
 </style>
           
 <!-- Sidebar (hidden by default) -->
