--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ral
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">                   
 <style>
-<!--body,h1,h2,h3,h4,h5 {font-family: "body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}Raleway", sans-serif}-->
-  body,h1,h2,h3,h4,h5 {font-family: "Alex Brush"}                                    
+body,h1,h2,h3,h4,h5 {font-family: "body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}Raleway", sans-serif}
+  h1,h2,h3,h4,h5 {font-family: "Alex Brush"}                                    
 </style>
           
 <!-- Sidebar (hidden by default) -->
