--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">                   
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}Raleway", sans-serif}
-  h1,h2,h3,h4,h5 {font-family: "Arizonia"}                                    
+ <!-- h1,h2,h3,h4,h5 {font-family: "Arizonia"}  -->                                  
 </style>
           
 <!-- Sidebar (hidden by default) -->
