--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
 <div class="w3-col l4">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
-    <br>
-  <!--img src=".jpg" style="width:100%"-->
+    
+  <img src="write.jpg" style="width:100%">
     <div class="w3-container w3-white">
       <br>
       <h4><b></b></h4>
