--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
   <img src="write.jpg" style="width:100%">
     <div class="w3-container w3-white">
       <br>
-      <h4><b></b></h4>
+      <h4><b>CONTRIBUTE</b></h4>
       <p> 
    
-
-
+ You see! I am not consistent in writing blogs so i invite you my kind
+blog reader to contribute in my blog post....
   </p>
     </div>
   </div><hr>
