--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
  You see! I am not consistent in writing blogs so i invite you my kind
 blog reader to contribute in my blog post....
   </p>
+    <h6><button class="w3-button w3-black w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">SUBSCRIBE</button></h6>                                                                                                          
     </div>
   </div><hr>
   
