--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
  You see! I am not consistent in writing blogs so i invite you my kind
 blog reader to contribute in my blog post....
   </p>
-    <h6><button class="w3-button w3-black w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">SUBSCRIBE</button></h6>                                                                                                          
+    <h6><button class="w3-button w3-black w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">CONTRIBUTE</button></h6>                                                                                                          
     </div>
   </div><hr>
   
@@ -209,13 +209,14 @@ and here on my blog you will find some real <s>shit</s> stuff.<br><i>So stay con
 
       <i onclick="document.getElementById('subscribe').style.display='none'" class="fa fa-remove w3-transparent w3-button w3-xlarge w3-right"></i>
 
-      <h2 class="w3-wide">SUBSCRIBE</h2>
+      <h2 class="w3-wide">CONTRIBUTE</h2>
 
-      <p>Join my mailing list to receive updates on the latest blog posts and other things.</p>
+      <p>When you will press that red button below it will lead to you to a google form
+          in that form make your blog entry with all your details and your all done.</p>
 
       <p><input class="w3-input w3-border" type="text" placeholder="Enter e-mail"></p>
 
-      <button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">Subscribe</button>
+      <button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">WRITE</button>
 
     </div>
 
