--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@ and here on my blog you will find some real <s>shit</s> stuff.<br><i>So stay con
           
         <a href="https://www.twitter.com/im_yogeshyadavadav"><i class="fa fa-twitter w3-hover-opacity"></i></a>
        <a href="https://www.linkedin.com/in/yogesh-kumar-yadav-a934631b1"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+           <p>I had deleted my instagram account and rarely used twitter so try only  linked in....                                                                                                                                
         </div>
       </div>
  
