--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@ body,h1,h2,h3,h4,h5 {font-family: "body,h1,h2,h3,h4,h5 {font-family: "Raleway", 
           
 <!-- Sidebar (hidden by default) -->
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()"
+  <a href="javascript:void(0)" onclick="w3_close()"w3-xlarge w3-animate-
   class="w3-bar-item w3-button">×</a>
                   
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
   <a href="#follow" onclick="w3_close()" class="w3-bar-item w3-button">Follow Me</a>
+   <a href="#write" onclick="w3_close()" class="w3-bar-item w3-button">Contribute</a>                                                                
 </nav>
 
 <!-- Top menu -->
@@ -97,6 +98,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
 </div>
 
 <!-- Introduction menu-->
+   <h1 id="write"></h1>                                                                                                           
 <div class="w3-col l4">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
