--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ and here on my blog you will find some real <s>shit</s> stuff.<br><i>So stay con
 
       
 
-      <button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">WRITE</button>
+  <a href="https://forms.gle/KnSq6d2HVA3ih3pZ9"><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">WRITE</button></a>
 
     </div>
 
