--- a/index.html
+++ b/index.html
@@ -365,11 +365,11 @@ and here on my blog you will find some real <s>shit</s> stuff.<br><i>So stay con
 
       <p>When you will press that red button below it will lead to you to a google form
 
-          in that form make your blog entry with all your details and your all done.</p>
+          in that form make your blog entry with all your details and you are all done...</p>
 
       
 
-  <a href="https://forms.gle/KnSq6d2HVA3ih3pZ9"><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">WRITE</button></a>
+  <a href="https://forms.gle/KnSq6d2HVA3ih3pZ9" style="text-decoration: none;"><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">WRITE</button></a>
 
     </div>
 
