--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ and here on my blog you will find some real <s>shit</s> stuff.<br><i>So stay con
 
   <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
 
-  <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Next »</button>
+  <button class="w3-button w3-black w3-padding-large w3-margin-bottom"><a href="Page 2.html" style="text-decoration: none;">Next »</a></button>
 
   <p>&copy; Copyright 2020,<br>All rights are reserved by Yogesh Yadav</p>
 
