--- a/page2.html
+++ b/page2.html
@@ -280,7 +280,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
 
                                                                                                               
 
-<!-- <!-- Introduction menu-->
+<!-- Introduction menu-->
 
    <h1 id="write"></h1>                                                                                                           
 
@@ -312,7 +312,7 @@ blog reader to contribute in my blog post....
 
     <h6><button class="w3-button w3-red w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">CONTRIBUTE</button></h6>                                                                                                          
 
-    </div> -->
+    </div> 
 
   </div><hr>
 
@@ -514,7 +514,7 @@ and here on my blog you will find some real <s>shit</s> stuff.<br><i>So stay con
 
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
 
-  <button class="w3-button w3-black w3-padding-large w3-margin-bottom"><a href="index.html">Previous</a></button>
+  <button class="w3-button w3-black w3-padding-large w3-margin-bottom"><a href="index.html" style="text-decoration: none;">Previous</a></button>
 
   <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Next »</button>
 
