--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body,h1,h2,h3,h4,h5 {font-family: "body,h1,h2,h3,h4,h5 {font-family: "Raleway", 
                   
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
   <a href="#follow" onclick="w3_close()" class="w3-bar-item w3-button">Follow Me</a>
-   <a href="#write" onclick="w3_close()" class="w3-bar-item w3-button">Contribute</a>                                                                
+  <!-- <a href="#write" onclick="w3_close()" class="w3-bar-item w3-button">Contribute</a>  -->                                                              
 </nav>
 
 <!-- Top menu -->
