--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body,h1,h2,h3,h4,h5 {font-family: "body,h1,h2,h3,h4,h5 {font-family: "Raleway", 
   <a href="javascript:void(0)" onclick="w3_close()"w3-xlarge w3-animate-
   class="w3-bar-item w3-button">×</a>
      <img src="Yogesh Yadav.jpg" alt="Failed to load" style="width: 75%;border-radius :50%;margin-left:auto;margin-right:auto">             
- <br> <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About Me</a>
+ <br> <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
   <a href="#follow" onclick="w3_close()" class="w3-bar-item w3-button">Follow Me</a>
   <!-- <a href="#write" onclick="w3_close()" class="w3-bar-item w3-button">Contribute</a>  -->                                                              
 </nav>
